Using Pexels API's add working images suggestions function for given city.

--- a/templates/result_main_page.html
+++ b/templates/result_main_page.html
@@ -3,12 +3,27 @@
 
 
 
-{{ user_input }}
+{{ user_input }}<br>
+
+<img src="{{ first_img_url }}" alt=" {{ first_img_name }}" style="width:800px; height:500px; border: 2px solid #ccc; align-content: center"><br>
+<h5>{{ first_img_name }}</h5><br>
+
+<img src="{{ second_img_url }}" alt=" {{ second_img_name }}" style="width:800px; height:500px; border: 2px solid #ccc; align-content: center"><br>
+<h5>{{ second_img_name }}</h5><br>
+
+<img src="{{ third_img_url }}" alt=" {{ third_img_name }}" style="width:800px; height:500px; border: 2px solid #ccc; align-content: center"><br>
+<h5>{{ third_img_name }}</h5><br>
+
+<img src="{{ fourth_img_url }}" alt=" {{ fourth_img_name }}" style="width:800px; height:500px; border: 2px solid #ccc; align-content: center"><br>
+<h5>{{ fourth_img_name }}</h5><br>
+
+<img src="{{ fifth_img_url }}" alt=" {{ fifth_img_name }}" style="width:800px; height:500px; border: 2px solid #ccc; align-content: center"><br>
+<h5>{{ fifth_img_name }}</h5><br>
 
 
  <h3>Weather Details</h3>
 
- refrence_time= {{ refrence_time }}  <br>
+ reference_time= {{ reference_time }}  <br>
     detailed_status=   {{   detailed_status  }}  <br>
         general_status=    {{ general_status }}<br>
           wind_direction=                              {{   wind_direction }}<br>
