--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -23,8 +23,8 @@
         <div class="container">
              <form action="{{url_for('dashboard.dashboard')}}" method="POST" id="auth-form">
                  <label for="country_or_city_input">Enter a country or city:</label>
-                <input type="text" name="country_or_city_input" id="country_or_city_input" placeholder="Country/City" class="input-field" required>
-
+                <input type="text" name="country_or_city_input" id="country_or_city_input" placeholder="City" class="input-field" required>
+                 <p> {{ error}}</p>
                 <input type="submit" value="Explor" class="btn btn-login" >
 
              </form>
