--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,7 +8,7 @@
 
 
 
-    <div class="main-content">
+    <div class="container">
 
         <div class="welcome-content">
             <div class="hero-section">
@@ -22,14 +22,11 @@
 
         <div class="container">
              <form action="{{url_for('dashboard.dashboard')}}" method="POST" id="auth-form">
-                 <label for="country_or_city_input">Enter a country or city:</label>
+                 <label for="country_or_city_input">Enter a City:</label>
                 <input type="text" name="country_or_city_input" id="country_or_city_input" placeholder="City" class="input-field" required>
                  <p> {{ error}}</p>
                 <input type="submit" value="Explor" class="btn btn-login" >
-
              </form>
-
-
         </div>
 
     </div>
