--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,19 +2,36 @@
 
 {% block body %}
 
-        <div class="container">
-                     <br>
-            <h2 class="form_head_topic">Signup</h2>
-            <form action="{{url_for('auth.signup')}}" method="POST" id="auth-form">
-                <input type="text" name="first_name" placeholder="First Name" class="input-field" required>
-                <input type="text" name="last_name" placeholder="Last Name" class="input-field" required>
-                <input type="email" name="email" placeholder="Email" class="input-field" required>
-                <input type="password" name="password" placeholder="Password" class="input-field" required>
-                <input type="submit" value="Submit" class="btn btn-login">
-                <input type="button" value="Login" class="btn btn-login" onclick="window.location.href='{{ url_for('auth.login') }}'">
+      <div class="container">
+        <br>
+        <h2 class="form_head_topic">Sign Up</h2>
+        <form action="{{url_for('auth.signup')}}" method="POST" id="auth-form">
+            <div class="form-group_">
+                <label for="first_name">First Name</label>
+                <input type="text" name="first_name" id="first_name" placeholder="First Name" class="input-field" required>
+            </div>
+            <br>
 
-            </form>
-        </div>
+            <div class="form-group_">
+                <label for="last_name">Last Name</label>
+                <input type="text" name="last_name" id="last_name" placeholder="Last Name" class="input-field" required>
+            </div>
+            <br>
+            <div class="form-group_">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" placeholder="Email" class="input-field" required>
+            </div>
+            <br>
+            <div class="form-group_">
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password" placeholder="Password" class="input-field" required>
+            </div>
+
+            <input type="submit" value="Submit" class="btn btn-login">
+            <input type="button" value="Login" class="btn btn-login" onclick="window.location.href='{{ url_for('auth.login') }}'">
+            <p style="color: red">{{ error }}</p>
+        </form>
+    </div>
 
 
 
