--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -22,8 +22,8 @@
 
         <div class="container">
              <form action="{{url_for('dashboard.dashboard')}}" method="POST" id="auth-form">
-                 <label for="country_or_city_input">Enter a City:</label>
-                <input type="text" name="country_or_city_input" id="country_or_city_input" placeholder="City" class="input-field" required>
+                 <label for="country_or_city_input">Enter a Country or City:</label>
+                <input type="text" name="country_or_city_input" id="country_or_city_input" placeholder="City/Country" class="input-field" required>
                  <p> {{ error}}</p>
                 <input type="submit" value="Explor" class="btn btn-login" >
              </form>
