--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
                     <input type="button" value="Register" class="btn btn-login" onclick="window.location.href='{{ url_for('auth.signup') }}'">
 
                 </form>
-                    <h4 style="color: red">{{error}}</h4>
+                    <h4 >{{error}}</h4>
             </div>
 
 
