--- a/templates/signup.html
+++ b/templates/signup.html
@@ -29,8 +29,10 @@
 
             <input type="submit" value="Submit" class="btn btn-login">
             <input type="button" value="Login" class="btn btn-login" onclick="window.location.href='{{ url_for('auth.login') }}'">
-            <p style="color: red">{{ error }}</p>
+
         </form>
+                              <h4 >{{error}}</h4>
+
     </div>
 
 
